resolve scrollbar issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -850,6 +850,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .configurator-scrollbar::-webkit-scrollbar{
   width: 7px;
+  margin-left: 30px;
 }
 
 /* Track */
@@ -862,12 +863,14 @@ input[type="number"]::-webkit-outer-spin-button {
 .configurator-scrollbar::-webkit-scrollbar-thumb {
   background: grey; 
   border-radius: 10px;
+  margin-left: 30px;
+  background: #508128;
 }
 
 /* Handle on hover */
-.configurator-scrollbar::-webkit-scrollbar-thumb:hover {
+/* .configurator-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #377504; 
-}
+} */
 
 
 
